components/tekton/dashboard/resources/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tekton-dashboard
spec:
  gateways:
  - knative-ingress-gateway.knative-serving.svc.cluster.local
  - mesh
  hosts:
  - tekton-dashboard.__TEKTON_ZONE__
  http:
  - route:
    - destination:
        host: tekton-dashboard.tekton-pipelines.svc.cluster.local
        port:
          number: 9097
    websocketUpgrade: true
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tekton-dashboard
  namespace: istio-system
spec:
  host: tekton-dashboard.tekton-pipelines.svc.cluster.local
  exportTo: ["*"]
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webhooks-extension
  namespace: istio-system
spec:
  host: webhooks-extension.tekton-pipelines.svc.cluster.local
  exportTo: ["*"]
  trafficPolicy:
    tls:
      mode: DISABLE
